# technopark_cpp

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  array_of_rates.c  array_of_rates.h  exchange_rate.c  exchange_rate.h  installgtest.sh  main.c  main_parallel.c  main_simple.c  tests.cpp
.github/workflow/: ci.yml
.github/workflows/: ci.yml
project/: CMakeLists.txt
project/data/: users1000.txt
project/general/: structs.h
project/include/: array_of_rates.h  exchange_rate.h
project/parallel/include/: parallel.h
project/parallel/source/: parralel.c
project/simple/include/: simple.h
project/simple/source/: simple.c
project/source/: array_of_rates.c  exchange_rate.c
scripts/: formating.sh  generate_coverage.sh  install_fbiner.sh
tests/: CMakeLists.txt  tests.cpp
tests/data/: films1000.txt  users1000.txt
