cmake_minimum_required(VERSION 3.0.0)
project(films_recommend_lib)

set(SIMPLE_NAME simple_lib)
set(PARALLEL_NAME parallel_lib)

file(GLOB SIMPLE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/simple/source/*.c)
file(GLOB SIMPLE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/simple/include)
file(GLOB GENERAL_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/general)
file(GLOB PARALLEL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/parallel/source/*.c)
file(GLOB PARALLEL_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/parallel/include)

include_directories(${SIMPLE_INCLUDE_DIRS} ${GENERAL_INCLUDE_DIRS} ${PARALLEL_INCLUDE_DIRS})

add_library(${SIMPLE_NAME} ${SIMPLE_SOURCES})
add_library(${PARALLEL_NAME} ${PARALLEL_SOURCES})

set(FILMS_RECOMMEND_SIMPLE_INCLUDE_DIRS ${SIMPLE_INCLUDE_DIRS} PARENT_SCOPE)
set(FILMS_RECOMMEND_PARALLEL_INCLUDE_DIRS ${PARALLEL_INCLUDE_DIRS} PARENT_SCOPE)
set(FILMS_RECOMMEND_GENERAL_INCLUDE_DIRS ${GENERAL_INCLUDE_DIRS} PARENT_SCOPE)
set(FILMS_RECOMMEND_SIMPLE_LIBRARIES ${SIMPLE_NAME} PARENT_SCOPE)
set(FILMS_RECOMMEND_PARALLEL_LIBRARIES ${PARALLEL_NAME} PARENT_SCOPE)